@@ -1,0 +1,4 @@
+2009-06-11  Manuel Cerón  <ceronman@gmail.com>
+
+	* ChopBoxConnector.cs: Improved FindEnd and FindStart
+
